--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cloudpickle==3.1.1
 colorama==0.4.6
 cryptography==44.0.3
 distro==1.9.0
+fastapi==0.116.1
 forbiddenfruit==0.1.4
 h11==0.16.0
 httpcore==1.0.9
@@ -18,9 +19,9 @@ jiter==0.10.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema_rs==0.29.1
-langchain-core==0.3.75
-langchain-openai==0.3.32
-langgraph==0.6.6
+langchain-core==0.3.76
+langchain-openai==0.3.33
+langgraph==0.6.7
 langgraph-api==0.4.7
 langgraph-checkpoint==2.1.1
 langgraph-cli==0.4.0
@@ -28,7 +29,7 @@ langgraph-prebuilt==0.6.4
 langgraph-runtime-inmem==0.9.0
 langgraph-sdk==0.2.4
 langsmith==0.4.21
-openai==1.102.0
+openai==1.107.2
 orjson==3.11.3
 ormsgpack==1.10.0
 packaging==25.0
